ui: improve styles

--- a/predictor/Makefile
+++ b/predictor/Makefile
@@ -10,8 +10,9 @@ export MODE := development
 # Help target
 help:
 	@echo "Available commands:"
-	@echo "  make retrain    - Retrain model for the given interval"
-	@echo "  make help   - Show this help message"
+	@echo "make train - Perform the initial training with 90% of the available data"
+	@echo "make predict - Predict all "next" datapoints and retrain the model with the new available data"
+	@echo "make help - Show this help message"
 
 # Train the LSTM model for the first time
 train:
